# underwaise

./: .gitignore  LICENSE  license.txt  readme.md
.github/workflows/: build-underwaise-ai_analyze_form.yml  build-underwaise-evaluate_application.yml  build-underwaise-process-engine.yml
assets/: application_and_feature_inserts.sql  application_and_feature_inserts_2.sql  health_applications_test_data.sql  testdaten_underwriting.csv
code/terraform/: .gitignore  acr.tf  container-app-analyze-form.tf  container-app-evaluate-application.tf  container-app-process-engine.tf  main.tf  mssql.tf  openai.tf  terraform.tfvars.example  variables.tf
code/underwaise-ai/analyze_form/: Dockerfile  Makefile  pyproject.toml
code/underwaise-ai/evaluate_application/: Dockerfile  Makefile  inference.py  main.py  pyproject.toml
code/underwaise-ai/evaluate_application/src/: load testdata.py  main.py  scaler.joblib  svm_model.joblib  train.py
code/underwaise-app/: enum.ts  middleware.ts  package-lock.json  package.json  types.d.ts
code/underwaise-app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
code/underwaise-app/components/: app-sidebar.tsx  catch-game.tsx  language-switcher.tsx  life-insurance-form.tsx  life-insurance-landing.tsx  nav-main.tsx  site-header.tsx
code/underwaise-app/i18n/: request.ts
code/underwaise-app/lib/: apiClient.ts
code/underwaise-app/messages/: de.json  en.json
code/underwaise-process-engine/: Dockerfile  pom.xml
documentation/: FinalPresentation.pptx  HighLevel_AI Flow  README.md  Unbenanntes Diagramm.drawio
(+88 files in other folders)
